# realtime-metrics-dashboard

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  start.sh
backend/src/: __init__.py  celery_config.py  config.py  db_dependency.py  settings.py
backend/src/dependencies/: auth_dependency.py  db_dependency.py  redis_dependency.py
backend/src/handlers/: auth.py
backend/src/managers/: user.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 2026_07_09_1217-b4c02012671b_initial.py  2026_07_09_1727-ae303b7a520b_add_users.py  2026_07_10_2329-bf87d6222bf9_add_metrics.py
backend/src/models/: __init__.py  metric.py  mixins.py  user.py
backend/src/routes/: auth.py  metrics.py  users.py
backend/src/schemas/: metric.py  user.py
backend/src/services/: user.py
backend/src/tasks/: __init__.py  generate_metrics.py  send_email.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  App.vue  AuthPage.tsx  HomePage.tsx  api.ts
frontend/src/api/: index.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: DashboardView.vue  LoginView.vue  RegisterView.vue
nginx/: nginx.conf
