[project]
name = "backend-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi[standard] (>=0.139.0,<0.140.0)",
    "uvicorn[standard] (>=0.51.0,<0.52.0)",
    "sqlalchemy[asyncio]>=2.0.51,<3.0.0",
    "asyncpg>=0.31.0,<0.32.0",
    "alembic (>=1.18.5,<2.0.0)",
    "pydantic-settings>=2.14.2,<3.0.0",
    "celery (>=5.6.3,<6.0.0)",
    "redis (>=8.0.1,<9.0.0)",
    "faker (>=40.28.1,<41.0.0)",
    "greenlet (>=3.5.3,<4.0.0)",
    "ruff>=0.15.20",
    "bcrypt==4.0.1",
    "passlib>=1.7.4",
    "itsdangerous>=2.2.0",
    "pyjwt>=2.13.0",
]

[dependency-groups]
dev = [
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiosqlite (>=0.22.1,<0.23.0)"
]
